# GOpenCL

./: AUTHORS  COPYING  Makefile  Makefile.am  README  README.markdown  THANKS  aclocal.m4  config.h.in  configure.ac
doc/reference/: Makefile.am
doc/reference/gopencl/: Makefile.am  gopencl-docs.sgml
examples/: Makefile.am  context_test.c  platform_test.c  simple_example.c
src/: Makefile  Makefile.am  gopencl-commandqueue.c  gopencl-commandqueue.h  gopencl-common.c  gopencl-common.h  gopencl-context.c  gopencl-context.h  gopencl-device.c  gopencl-device.h  gopencl-platform.c  gopencl-platform.h  gopencl.h  xopencl.h
test/: Makefile  plat  plat.c
