
lib_LTLIBRARIES = libGOpenCL.la
libGOpenCL_la_SOURCES = xopencl.h user-marshallers.c user-marshallers.h gopencl-platform.c gopencl-platform.h gopencl-device.c gopencl-device.h gopencl-context.c gopencl-context.h
AM_CFLAGS = $(GLIB_CFLAGS) $(GOBJECT_CFLAGS)
LDADD = $(GLIB_LIBS) $(GOBJECT_LIBS)

include_HEADERS = gopencl.h gopencl-platform.h gopencl-device.h gopencl-context.h

